# j.cpc.2023.109052

./: README.md  j.cpc.2023.109052.ipynb
dataOwn/PyTorch/: inferenceTime_PyTorch.csv  inferenceTime_PyTorch.ipynb  inferenceTime_PyTorch.py
dataOwn/libtorch/: CMakeLists.txt  README.txt  inferenceTime_libtorch.cpp  inferenceTime_libtorch.csv
dataOwn/libtorch/other_examples/: example1.cpp  example2.cpp  example3.cpp  example4.cpp
dataOwn/libtorch/other_examples/example-app_libtorch/: README.txt
dataOwn/libtorch_batchsize/: CMakeLists.txt  README.txt  inferenceTime_libtorch_batchsize.cpp  inferenceTime_libtorch_batchsize.csv  inferenceTime_libtorch_batchsize.nb  inferenceTime_libtorch_batchsize_save.csv
dataOwn/my_model/: PyTorchModelCreateONNXconvert.ipynb  PyTorchModelCreateONNXconvert_33.pt  gemm_small_weights.onnx
dataOwn/roseNNa/: notes_roseNNa.txt
dataOwn/roseNNa/L30d30/: L30d30.f90  L30d30.py  L30d30.txt  L30d30_weights.onnx  README_L30d30.txt  roseNNa_mlp_inferenceTime_batchsize_L30d30.csv
dataOwn/roseNNa/Ld/: Ld.f90  Ld.py  Ld_weights.onnx  README_Ld.txt  inferenceTime_roseNNa.csv
dataOwn/roseNNa/gemm_big/: README_gemm_big.txt  gemm_big.py
dataOwn/roseNNa/gemm_small/: README_gemm_small.txt  ex_gemm_small_batch.f90  ex_gemm_small_simple.f90  (+3 more)
dataWPD/: fig2a.tar  fig2b.tar  fig3a.tar  fig3b.tar  fig4.tar
dataWPD/fig2a/: wpd.json
dataWPD/fig2b/: wpd.json
dataWPD/fig3a/: info.json  wpd.json
dataWPD/fig3b/: wpd.json
dataWPD/fig4/: info.json  wpd.json
first_run/: capiTester.f90  guide_RoseNNa.md  onnxModel.txt  onnxWeights.txt  test.txt
